src/objects/Actual_Sales__c.object
<CustomObject>
    <description>New object that will contain header and line items against opportunity and account</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actual Sales</relationshipLabel>
        <relationshipName>Actual_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Opportunity_ID__c</fullName>
        <label>Approved Opportunity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <description>SAP bill to #</description>
        <label>Bill To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Rollling_Year_Formula__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,Rolling_Year__c ),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Rollling Year Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_HD_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check to see if the contact phone is the same as the HD store&apos;s phone</description>
        <label>Contact Phone = HD Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTP_Rollling_Year_Formula__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,Rolling_Year__c ),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DTP Rollling Year Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Retail__c</fullName>
        <label>Est. Retail</label>
        <summarizedField>Actual_Sales_Line_Items__c.Est_Retail__c</summarizedField>
        <summaryForeignKey>Actual_Sales_Line_Items__c.SAP_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HD_cust_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HD Cust ID</label>
        <referenceTo>HD_Cust_ID__c</referenceTo>
        <relationshipLabel>Actual Sales</relationshipLabel>
        <relationshipName>Actual_Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Parent__c</fullName>
        <description>To check to see if this account has a parent - for reporting of parent child relationships</description>
        <formula>If(Not(Isblank(Account_Name__r.ParentId )), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMTD_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LMTD Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LMTD Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_Formula_DTP__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,LMTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMTD Formula DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD_Formula_POS__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,LMTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMTD Formula CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMTD__c</fullName>
        <formula>AND(Order_date__c &gt;= DATE(YEAR($Setup.Actual_Sales_Dates__c.Month_Start_Date__c )-1,MONTH($Setup.Actual_Sales_Dates__c.Month_Start_Date__c),DAY($Setup.Actual_Sales_Dates__c.Month_Start_Date__c )), Order_date__c &lt;= DATE(YEAR($Setup.Actual_Sales_Dates__c.End_Date__c)-1, MONTH($Setup.Actual_Sales_Dates__c.End_Date__c), DAY($Setup.Actual_Sales_Dates__c.End_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYMTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LYTD_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LYTD Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number field gets updated from Workflow and this is used to Rollup LY TD</description>
        <label>LYTD Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_Formula_DTP__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,LYTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYTD Formula DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD_Formula_POS__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,LYTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYTD Formula CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LYTD__c</fullName>
        <formula>AND(Order_date__c &gt;= DATE(YEAR(  $Setup.Actual_Sales_Dates__c.Year_Start_Date__c)-1,MONTH($Setup.Actual_Sales_Dates__c.Year_Start_Date__c),DAY($Setup.Actual_Sales_Dates__c.Year_Start_Date__c)), Order_date__c &lt;=  DATE(YEAR($Setup.Actual_Sales_Dates__c.End_Date__c)-1, MONTH($Setup.Actual_Sales_Dates__c.End_Date__c), DAY($Setup.Actual_Sales_Dates__c.End_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LYTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LY_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LY Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LY Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_Formula_DTP__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,LY__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LY Formula DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_Formula_POS__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,LY__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LY Formula CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY__c</fullName>
        <formula>AND(Order_date__c &gt;= DATE(YEAR(TODAY())-1, 1, 1), Order_date__c &lt;= DATE(YEAR(TODAY())-1,12,31))</formula>
        <label>LY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_Amount__c</fullName>
        <description>Trigger based entry , to be used with CRM fusion job that looks to the formula to populate nightly for merged accounts/optys</description>
        <label>Managed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managed_Sale_Amount__c</fullName>
        <formula>If((datevalue(Account_Name__r.CreatedDate)-30) &lt;=  Order_date__c  ,  Purchase_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_comments__c</fullName>
        <label>Notes/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Actual Sales</relationshipLabel>
        <relationshipName>Actual_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_change_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity change Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <label>Ordered By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_amount__c</fullName>
        <label>POS Amount CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>If(not(isblank( Account_Name__r.Parent.Name)) , Account_Name__r.Parent.Name, Account_Name__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <description>SAP Payer #</description>
        <label>Payer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <formula>Est_Retail__c -  Tyson_Discount__c + POS_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rolling_Year__c</fullName>
        <formula>AND(Order_date__c &gt;= DATE(YEAR($Setup.Actual_Sales_Dates__c.End_Date__c)-1, MONTH($Setup.Actual_Sales_Dates__c.End_Date__c), DAY($Setup.Actual_Sales_Dates__c.End_Date__c)) , Order_date__c &lt;= $Setup.Actual_Sales_Dates__c.End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rolling Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rolling_year_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rolling year Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rolling_year_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rolling year Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Order__c</fullName>
        <description>used for external upsert only.</description>
        <externalId>true</externalId>
        <label>SAP Order</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <description>Used for reporting.  Previously we had record type (DTP vs POS) and Direct flag.  These will be used to set this flag.  DTP plus direct True = Direct.  DTP plus direct False = DTP.  POS = Carryout</description>
        <label>Sale Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carryout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_to_Add_1__c</fullName>
        <label>Ship to Add 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to__c</fullName>
        <description>Ship to # from SAP</description>
        <label>Ship to</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_add_2__c</fullName>
        <label>Ship to Add 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_state__c</fullName>
        <label>Ship to State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_zip__c</fullName>
        <label>Ship to Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to__c</fullName>
        <description>Sold To SAP #</description>
        <label>Sold to</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Order</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_of_Purchase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The 4 digit HD store that the order was placed for</description>
        <label>Store of Purchase</label>
        <referenceTo>Home_Depot_Store__c</referenceTo>
        <relationshipLabel>Actual Sales</relationshipLabel>
        <relationshipName>Actual_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMTD_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TMTD Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMTD_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TMTD Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMTD_Formula_DTP__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,TMTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMTD Formula DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMTD_Formula_POS__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,TMTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMTD Formula CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TMTD__c</fullName>
        <formula>AND(Order_date__c &gt;=  $Setup.Actual_Sales_Dates__c.Month_Start_Date__c, Order_date__c &lt;= $Setup.Actual_Sales_Dates__c.End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYMTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TYTD_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TYTD Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TYTD_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TYTD Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TYTD_Formula_DTP__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,TYTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYTD Formula DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TYTD_Formula_POS__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,TYTD__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYTD Formula CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TYTD__c</fullName>
        <formula>AND(Order_date__c &gt;=  $Setup.Actual_Sales_Dates__c.Year_Start_Date__c   , Order_date__c &lt;=  $Setup.Actual_Sales_Dates__c.End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TYTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TY_Currency_DTP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TY Currency DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TY_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TY Currency CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TY_Formula_DTP__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;DTP Orders&quot;,TY__c),Purchase_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TY Formula DTP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TY_Formula_POS__c</fullName>
        <formula>if(AND(RecordType.Name==&quot;POS Sales&quot;,TY__c),Purchase_Amount__c,0)</formula>
        <label>TY Formula CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TY__c</fullName>
        <formula>AND(Order_date__c &gt;= DATE(YEAR(TODAY()), 1, 1), Order_date__c &lt;=DATE(YEAR(TODAY()), 12, 31))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tyson_Code__c</fullName>
        <label>Tyson Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tyson_Discount__c</fullName>
        <label>Tyson Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <description>This field will be used for CRM fusion for mass update of triggers to do the rollups and calculations.</description>
        <label>Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>year( Order_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>managed_check__c</fullName>
        <formula>Managed_Amount__c - Managed_Sale_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>managed check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ship_to_country__c</fullName>
        <label>Ship to Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Actual Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Account_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>SAP_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Generic_DTP</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Phone__c</columns>
        <columns>Contact_Phone_HD_Store__c</columns>
        <columns>Store_of_Purchase__c</columns>
        <columns>Purchase_Order__c</columns>
        <columns>Purchase_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Generic Account DTP</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Generic DTP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tyson_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Tyson_Code__c</columns>
        <columns>Tyson_Discount__c</columns>
        <columns>Est_Retail__c</columns>
        <columns>Delivery_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tyson_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Tyson Orders</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>all_sales</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Purchase_Order__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SAP_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Actual_Sales__c.DTP_Orders</value>
        </filters>
        <label>all dtp sales</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all_sales_billing</fullName>
        <columns>NAME</columns>
        <columns>SAP_Order__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Purchase_Order__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Actual_Sales__c.DTP_Orders</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Credit hold</value>
        </filters>
        <filters>
            <field>Delivery_date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>all dtp sales billing block</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all_sales_open</fullName>
        <columns>NAME</columns>
        <columns>SAP_Order__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Purchase_Order__c</columns>
        <columns>Ordered_By__c</columns>
        <columns>Purchase_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Actual_Sales__c.DTP_Orders</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Order</value>
        </filters>
        <filters>
            <field>Delivery_date__c</field>
            <operation>lessThan</operation>
            <value>4/20/2015</value>
        </filters>
        <label>all dtp sales open and old</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actual Sales</pluralLabel>
    <recordTypes>
        <fullName>DTP_Orders</fullName>
        <active>true</active>
        <description>DTP orders from SAP</description>
        <label>DTP Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_Sales</fullName>
        <active>true</active>
        <description>THD sales cash and carry and so</description>
        <label>POS Sales</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Opportunity_change_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Opportunity__c),Opportunity_change_Check__c== False,$Profile.Name &lt;&gt;	&quot;Sales Administrator&quot;,$Profile.Name &lt;&gt; &quot;System Administrator&quot; )</errorConditionFormula>
        <errorMessage>Opportunity cannot be changed directly</errorMessage>
    </validationRules>
</CustomObject>